added content to about page, styled arrows for carousel, added deep dive page

--- a/src/components/carousel/arrows/arrows.styles.scss
+++ b/src/components/carousel/arrows/arrows.styles.scss
@@ -6,10 +6,5 @@
 	top: 50%;
 }
 
-.carousel-arrow.right {
-	right: 1rem;
-}
-
-.carousel-arrow.left {
-	left: 1rem;
-}
+.carousel-arrow_right { right: 1rem; }
+.carousel-arrow_left { left: 1rem; }
