--- a/src/components/carousel-item/carousel-item.styles.scss
+++ b/src/components/carousel-item/carousel-item.styles.scss
@@ -8,3 +8,18 @@
     height: 100%;
     background-repeat: no-repeat;
  }
+
+ .carouselItem-headline {
+     position: absolute;
+     width: 100%;
+     bottom: 0;
+     padding: 50px;
+     background-color: rgba(#e2e2e2, 0.15);
+ }
+
+ .carsouelItem-headline-title {
+     display: block;
+     font-size: 1rem;
+     color: black;
+     font-weight: bold;
+ }
