added PropTypes, removed create react app default files, carousel cleaup

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,9 @@
 }
 
 body {
+  margin: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   font-family: 'Open Sans', sans-serif;
   color: #000000;
 }
