--- a/src/components/carousel/main/carousel.styles.scss
+++ b/src/components/carousel/main/carousel.styles.scss
@@ -3,3 +3,32 @@
     max-height: 650px;
     overflow: hidden;
 }
+
+.carousel-item {
+    max-height: 650px;
+}
+
+@keyframes imageTransition {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+}
+
+.carousel-item-image {
+    display: block;
+    animation: imageTransition 2s;
+}
+
+ .carousel-item-headline {
+     width: 100%;
+     position: absolute;
+     bottom: 0;
+     padding: 50px;
+     background-color: rgba(0, 0, 0, 0.25);
+ }
+
+ .carousel-item-headline-title {
+     display: block;
+     font-size: 1.25rem;
+     color: white;
+     font-weight: bold;
+ }
