--- a/src/components/carousel/main/carousel.styles.scss
+++ b/src/components/carousel/main/carousel.styles.scss
@@ -1,20 +1,43 @@
 .carousel {
     position: relative;
-    max-height: 650px;
+    margin: auto;
     overflow: hidden;
 }
 
+@media (min-width: 1281px) {  
+	.carousel {
+        height: 720px;
+		max-width: 1080px;
+	}
+}
+  
+@media (min-width: 551px) and (max-width: 1280px) {
+	.carousel {
+        height: 480px;
+		max-width: 720px;
+	}
+}
+
+@media (min-width: 320px) and (max-width: 550px) {
+    .carousel {
+        height: 320px;
+		max-width: 720px;
+	}
+  }
+
 .carousel-item {
-    max-height: 650px;
+    position: absolute;
+    animation: imageTransition 2s;
 }
 
 @keyframes imageTransition {
-    0% { opacity: 0; }
-    100% { opacity: 1; }
+    0% { z-index: -1; opacity: 0;  }
+    100% { z-index: 1; opacity: 1; }
 }
 
 .carousel-item-image {
     display: block;
+    position: relative;
     animation: imageTransition 2s;
 }
 
@@ -22,13 +45,27 @@
      width: 100%;
      position: absolute;
      bottom: 0;
-     padding: 50px;
+     padding: 20px 50px;
      background-color: rgba(0, 0, 0, 0.25);
  }
+  
+@media (min-width: 1025px) {
+    .carousel-item-headline {
+        padding: 50px;
+	}
+}
 
  .carousel-item-headline-title {
      display: block;
      font-size: 1.25rem;
      color: white;
      font-weight: bold;
+ }
+
+ .carousel-item-headline-subtitle {
+     display: block;
+     font-size: 1rem;
+     color: #e2e2e2;
+     font-weight: bold;
+     line-height: 2;
  }
