--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -1,7 +1,27 @@
 .header {
-    margin: 45px 0;
+    width: 80vw;
+    margin: 45px auto;
 }
 
-.title {
+.header-titles {
+    margin-bottom: 2vh;
+    text-align: center;
+}
+
+.header-title {
+    cursor: pointer;
+    color: green;
+    font-size: 4vh;
     font-family: 'Comfortaa', cursive;
+
+    &:hover {
+        color: darkgreen;
+    }
+}
+
+.header-subtitle {
+    display: block;
+    color: grey;
+    font-size: 2vh;
+    font-family: 'Dancing Script', cursive;
 }
