--- a/src/components/carousel/main/carousel.styles.scss
+++ b/src/components/carousel/main/carousel.styles.scss
@@ -2,7 +2,10 @@
     position: relative;
     margin: auto;
     overflow: hidden;
+    animation: fadeIn 2.5s;
 }
+
+@keyframes fadeIn { 0% { opacity:0; } 80% {opacity: 0 } 100% { opacity:1; } }
 
 @media (min-width: 1281px) {  
 	.carousel {
