--- a/src/styles/heroBlock/_heroBlock.scss
+++ b/src/styles/heroBlock/_heroBlock.scss
@@ -1,23 +1,3 @@
-.homepage {
-    margin: 0 auto;
-}
-
-.homepage-carousel {
-    margin-bottom: 75px;
-}
-
-@media (min-width: 551px) and (max-width: 1280px) {
-	.homepage-carousel {
-        margin-bottom: 50px;
-    }
-}
-
-@media (min-width: 320px) and (max-width: 550px) {
-    .homepage-carousel {
-        margin-bottom: 25px;
-    }
-  }
-
 .heroBlock {
     display: flex;
     justify-content: center;
@@ -32,24 +12,26 @@
 	}
 }
 
-.heroBlock_flip {
-    flex-direction: row-reverse;
-}
-
-.heroBlock > *:first-child {
-
-}
-
-.heroBlock > *:last-child {}
-
 .heroBlock + .heroBlock {
-    margin-top: 25px;
-    padding-top: 25px;
+    margin-top: 10vw;
+    padding-top: 10vw;
     border-top: 1px solid grey;
 }
 
 .heroBlock-media {
-    max-width: 500px;
+    max-width: 800px;
+    box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.4);
+    border: 3px solid #0f6402;
+}
+
+.heroBlock-media > * {
+    display: block;
+}
+
+.heroBlock-content {
+    width: 40vw;
+    margin: 40px;
+    text-align: center;
 }
 
 .heroBlock-content > * + * {
@@ -57,7 +39,7 @@
 }
 
 .heroBlock-content-title {
-    color: #bbb;
+    color: #CDCDCD;
     font-size: 4vh;
 }
 
@@ -76,4 +58,10 @@
     text-transform: uppercase;
     color: #fff;
     border-radius: .2em;
+
+    &:hover {
+        background-color: rgba(15, 100, 2, .90);
+        color: #ffffff;
+    }
 }
+
