--- a/src/styles/heroBlock/_heroBlock.scss
+++ b/src/styles/heroBlock/_heroBlock.scss
@@ -3,6 +3,7 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    padding: 2vw;
 }
 
 @media (min-width: 1025px) {
@@ -15,13 +16,13 @@
 .heroBlock + .heroBlock {
     margin-top: 10vw;
     padding-top: 10vw;
-    border-top: 1px solid grey;
+    border-top: 1px solid #ACA9A2;
 }
 
 .heroBlock-media {
     max-width: 800px;
     box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.4);
-    border: 3px solid #0f6402;
+    border: 2px outset #385424;
 }
 
 .heroBlock-media > * {
@@ -30,37 +31,37 @@
 
 .heroBlock-content {
     width: 40vw;
-    margin: 40px;
+    margin: 5vw;
     text-align: center;
 }
 
 .heroBlock-content > * + * {
-    margin-top: 2vh;
+    margin-top: 1vw;
 }
 
 .heroBlock-content-title {
-    color: #CDCDCD;
-    font-size: 4vh;
+    color: #385424;
+    font-size: 3vw;
 }
 
 .heroBlock-content-body {
-
+    margin-bottom: 2vw;
 }
 
 .heroBlock-content-button {
     display: inline-block;
     padding: 1em 2.5em;
     border: 0px solid #000;
-    background-color: #0f6402;
+    background-color: #385424;
     font-style: normal;
     letter-spacing: .05em;
     line-height: 1.1em;
     text-transform: uppercase;
-    color: #fff;
+    color: #ffffff;
     border-radius: .2em;
 
     &:hover {
-        background-color: rgba(15, 100, 2, .90);
+        background-color: #304620;
         color: #ffffff;
     }
 }
