--- a/src/styles/homePage/_homePage.scss
+++ b/src/styles/homePage/_homePage.scss
@@ -3,7 +3,7 @@
 }
 
 .homepage-carousel {
-    margin-bottom: 10vw;
+    margin-bottom: 5vh;
 }
 
 @media (min-width: 551px) and (max-width: 1280px) {
