--- a/src/styles/settings/_settings.scss
+++ b/src/styles/settings/_settings.scss
@@ -7,7 +7,7 @@
     }
 
         .settings-title-text {
-            color: #aaa;
+            color: #ACA9A2;
             font-size: 17px;
             font-weight: bold;
         }
@@ -21,7 +21,7 @@
     }
 
         .settings-list-item-text {
-            color: #aaa;
+            color: #ACA9A2;
             font-size: 15px;
             font-style: italic;
         }
