--- a/src/styles/carousel/_carousel.scss
+++ b/src/styles/carousel/_carousel.scss
@@ -25,31 +25,37 @@
     animation: imageTransition 2s;
 }
 
+@keyframes imageTransition {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+}
+
 .carousel-item-headline {
     width: 100%;
     position: absolute;
     bottom: 0;
     padding: 20px 50px;
-    background-color: rgba(0, 0, 0, 0.25);
+    background-color: rgba(172,169,162, 0.25);
 }
 
 @media (min-width: 1025px) {
     .carousel-item-headline {
-        padding: 50px;
+        padding: 30px 50px;
     }
 }
 
 .carousel-item-headline-title {
     display: block;
-    font-size: 1.25rem;
+    font-size: 3vw;
     color: white;
     font-weight: bold;
+    font-family: 'Dancing Script', cursive;
 }
 
 .carousel-item-headline-subtitle {
     display: block;
-    font-size: 1rem;
-    color: #e2e2e2;
+    font-size: 1.25vw;
+    color: #ffffff;
     font-weight: bold;
     line-height: 2;
 }
@@ -57,8 +63,8 @@
 .carousel-arrow {
     cursor: pointer;
 	color: #ffffff;
-	background-color: rgba(0, 0, 0, .2);
-	padding: 20px;
+	background-color: rgba(0, 0, 0, .3);
+	padding: 1.5vw;
 	font-size: 2rem;
 	position: absolute;
 	top: 25vw;
@@ -68,7 +74,7 @@
 
 @media (min-width: 1281px) {  
 	.carousel-arrow {
-		top: 30vw;
+		top: 45%;
 	}
 }
   
