--- a/src/styles/footer/_footer.scss
+++ b/src/styles/footer/_footer.scss
@@ -1,8 +1,8 @@
 .footer {
     margin: 10vw auto 0;
     padding-top: 15px;
-    border-top: 1px solid grey;
-    background-color: none;
+    border-top: 1px solid #ACA9A2;
+    background: none;
 }
 
 .footer-list {
@@ -16,9 +16,9 @@
 .footer-list-link {
     display: inline-block;
     font-size: 1.75rem;
-    color: #0f6402;
+    color: #385424;
 
     &:hover {
-        color: rgba(15, 100, 2, .90);
+        color: rgba(15, 100, 2, .95);
     }
 }
