--- a/src/styles/contact/_contact.scss
+++ b/src/styles/contact/_contact.scss
@@ -1,3 +1,82 @@
 .contact {
+    position: relative;
+    width: 80vw;
+    max-width: 450px;
+    margin: auto;
+    padding: 2vw 3vw 6vw;
+    background-color: #385424;
+    border-radius: 5px;
+    box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.4);
+    border: 2px inset #385424;
+}
 
+.contactForm-title {
+    display: block;
+    text-align: center;
+    margin-bottom: 10px;
+    color: #ffffff;
+    font-size: 2.5rem;
+    font-family: 'Dancing Script', cursive;
+}
+
+.contactForm-field + .contactForm-field {
+    margin-top: 20px;
+}
+
+.contactForm-field-label {
+    display: block;
+    margin-bottom: 10px;
+    font-family: 'Comfortaa', cursive;
+    color: #ffffff;
+}
+
+.contactForm-field-input {
+    width: 100%;
+	border:1px solid #ACA9A2;
+	padding: 7px;
+	margin:0px;
+	-webkit-transition: all 0.30s ease-in-out;
+	-moz-transition: all 0.30s ease-in-out;
+	-ms-transition: all 0.30s ease-in-out;
+	-o-transition: all 0.30s ease-in-out;
+    outline: none;	
+    font-family: 'Comfortaa', cursive;
+}
+
+.submit-content-button {
+    display: block;
+    width: 100%;
+    padding: 1em 2.5em;
+    border: 1px solid #ACA9A2;
+    background-color: #ffffff;
+    font-style: normal;
+    text-transform: uppercase;
+    color: #385424;
+    border-radius: .2em;
+    font-family: 'Comfortaa', cursive;
+
+    &:hover {
+        background-color: rgba(255, 255, 255, .9);
+    }
+
+    &:disabled {
+        background-color: rgba(255, 255, 255, .2);
+    }
+}
+
+.error { display: none; }
+
+.active.error { 
+    display: block;
+    color: #ffffff;
+}
+
+.contactForm-field-success {
+    display: none;
+    position: absolute;
+    bottom: 10px;
+    margin: auto;
+    text-align: center;
+    font-family: 'Comfortaa', cursive;
+    color: white;
 }
