removed dom called for each on click in onSlideClick in carousel component

--- a/src/styles/carousel/_carousel.scss
+++ b/src/styles/carousel/_carousel.scss
@@ -17,6 +17,11 @@
 
 .carousel-item {
     position: absolute;
+    z-index: -1;
+}
+
+.carousel-item:first-child {
+    z-index: 1;
 }
 
 .carousel-item-image {
