--- a/src/styles/carousel/_carousel.scss
+++ b/src/styles/carousel/_carousel.scss
@@ -3,21 +3,33 @@
 */
 
 .carousel {
+    --slide-size: 95vmin;
+    --slide-margin: 4vmin;
+    height: calc(var(--slide-size) / 1.5);
+    width: var(--slide-size);
     position: relative;
-    margin: auto;
-    overflow: hidden;
+    margin: 0 auto;
+}
+
+.carousel_wrap {
+    display: flex;
+    margin: 0 calc(var(--slide-margin) * -1);
+    position: absolute;
+    transition: transform 600ms cubic-bezier(0.25, 1, 0.35, 1);
 }
 
 @media (min-width: 1281px) {
-    .carousel { max-width: 1200px; }
+    .carousel { max-width: 1280px; }
 }
 
 .carousel-item {
-    position: absolute;
-    z-index: -1;
-}
-
-.carousel-item:first-child {
+    margin: 0 var(--slide-margin);
+    opacity: 1;
+    position: relative;
+    transition: 
+    opacity calc(600ms / 2) cubic-bezier(0.25, 1, 0.35, 1),
+    transform calc(600ms / 2) cubic-bezier(0.25, 1, 0.35, 1);
+    width: var(--slide-size);
     z-index: 1;
 }
 
