--- a/src/styles/carousel/_carousel.scss
+++ b/src/styles/carousel/_carousel.scss
@@ -19,15 +19,17 @@
 }
 
 @media (min-width: 1281px) {
-    .carousel { max-width: 1280px; }
+    .carousel {
+        max-width: 1280px;
+    }
 }
 
 .carousel-list-item {
     margin: 0 var(--slide-margin);
     position: relative;
-    transition: 
-    opacity calc(600ms / 2) cubic-bezier(0.25, 1, 0.35, 1),
-    transform calc(600ms / 2) cubic-bezier(0.25, 1, 0.35, 1);
+    transition:
+        opacity calc(600ms / 2) cubic-bezier(0.25, 1, 0.35, 1),
+        transform calc(600ms / 2) cubic-bezier(0.25, 1, 0.35, 1);
     width: var(--slide-size);
     z-index: 1;
 }
@@ -35,7 +37,6 @@
 .carousel-list-item-image {
     display: block;
     position: relative;
-    opacity: 0;
 }
 
 .carousel-list-item-headline {
@@ -43,7 +44,7 @@
     position: absolute;
     bottom: 0;
     padding: 20px 50px;
-    background-color: rgba(172,169,162, 0.25);
+    background-color: rgba(172, 169, 162, 0.25);
 }
 
 @media (min-width: 1025px) {
@@ -70,21 +71,26 @@
 
 .carousel-arrow {
     cursor: pointer;
-	color: #ffffff;
-	background-color: rgba(0, 0, 0, .3);
-	padding: 1.5vw;
-	font-size: 2rem;
-	position: absolute;
-	top: 25vw;
-	line-height: 0;
-	z-index: 2;
+    color: #ffffff;
+    background-color: rgba(0, 0, 0, .3);
+    padding: 1.5vw;
+    font-size: 2rem;
+    position: absolute;
+    top: 45%;
+    line-height: 0;
+    z-index: 2;
 }
 
-@media (min-width: 1281px) {  
-	.carousel-arrow {
-		top: 45%;
-	}
+@media (min-width: 1281px) {
+    .carousel-arrow {
+        top: 45%;
+    }
 }
-  
-.carousel-arrow_right { right: 0; }
-.carousel-arrow_left { left: 0; }
+
+.carousel-arrow_right {
+    right: 0;
+}
+
+.carousel-arrow_left {
+    left: 0;
+}
