--- a/src/styles/carousel/_carousel.scss
+++ b/src/styles/carousel/_carousel.scss
@@ -2,95 +2,6 @@
 * Carousel Object
 */
 
-.carousel {
-    --slide-size: 95vmin;
-    --slide-margin: 4vmin;
-    height: calc(var(--slide-size) / 1.5);
-    width: var(--slide-size);
-    position: relative;
-    margin: 0 auto;
-}
+.carousel {}
 
-.carousel-list {
-    display: flex;
-    margin: 0 calc(var(--slide-margin) * -1);
-    position: absolute;
-    transition: transform 600ms cubic-bezier(0.25, 1, 0.35, 1);
-}
-
-@media (min-width: 1281px) {
-    .carousel {
-        max-width: 1280px;
-    }
-}
-
-.carousel-list-item {
-    margin: 0 var(--slide-margin);
-    position: relative;
-    transition:
-        opacity calc(600ms / 2) cubic-bezier(0.25, 1, 0.35, 1),
-        transform calc(600ms / 2) cubic-bezier(0.25, 1, 0.35, 1);
-    width: var(--slide-size);
-    z-index: 1;
-}
-
-.carousel-list-item-image {
-    display: block;
-    position: relative;
-}
-
-.carousel-list-item-headline {
-    width: 100%;
-    position: absolute;
-    bottom: 0;
-    padding: 20px 50px;
-    background-color: rgba(172, 169, 162, 0.25);
-}
-
-@media (min-width: 1025px) {
-    .carousel-list-item-headline {
-        padding: 30px 50px;
-    }
-}
-
-.carousel-list-item-headline-title {
-    display: block;
-    font-size: 3vw;
-    color: white;
-    font-weight: bold;
-    font-family: 'Dancing Script', cursive;
-}
-
-.carousel-list-item-headline-subtitle {
-    display: block;
-    font-size: 1.25vw;
-    color: #ffffff;
-    font-weight: bold;
-    line-height: 2;
-}
-
-.carousel-arrow {
-    cursor: pointer;
-    color: #ffffff;
-    background-color: rgba(0, 0, 0, .3);
-    padding: 1.5vw;
-    font-size: 2rem;
-    position: absolute;
-    top: 45%;
-    line-height: 0;
-    z-index: 2;
-}
-
-@media (min-width: 1281px) {
-    .carousel-arrow {
-        top: 45%;
-    }
-}
-
-.carousel-arrow_right {
-    right: 0;
-}
-
-.carousel-arrow_left {
-    left: 0;
-}
+.carousel-list {}
