minor header changes to navigation

--- a/src/styles/header/_header.scss
+++ b/src/styles/header/_header.scss
@@ -3,8 +3,13 @@
     margin: 45px auto;
 }
 
+.header>.level {
+    width: 50%;
+    margin: auto;
+}
+
 .header-titles {
-    margin-bottom: 3vh;
+    margin-bottom: 5vh;
     text-align: center;
 }
 
